# Financial-Algorithms

./: .env.example  .gitignore  7_INDICATOR_SYNERGY_ANALYSIS.md  BEFORE_AFTER_LOOKAHEAD_BUG.md  COMPLETION_SUMMARY.md  DATA_SOURCES.md  DEPLOYMENT_READINESS.md  ENHANCED_RESULTS.md  FINAL_RESULTS.json  HYBRID_STRATEGY_GUIDE.md  High-Frequency Trading (HFT) Systems A Comprehensive Overview deep-research-report (1).md  IMPLEMENTATION_SUMMARY.md  INDICATORS.md  INTRADAY_TRADING_FEASIBILITY.md  OPTIMIZATION_README.md  PAPER_BACKTEST_VALIDATION.md  PHASE6_ONBOARDING.md  PHASE6_SUMMARY.md  PROJECT_ROADMAP.md  QUICK_REFERENCE.md  README.md  README_20_INDICATORS.md  README_RESTRUCTURED.md  README_VWAP_ATR.md  REAL_DATA_RESULTS.md  REAL_DATA_TESTING.md  REORGANIZATION_COMPLETE.md  RESULTS_SUMMARY.md  TOP_3_STRATEGIES_REVIEW.md  TUNING_RESULTS_CRITICAL.md  VALIDATION_REPORT_MARCH11.md  VWAP_COMBINATION_RESULTS.md  Why Backtests Fail in Live Trading deep-research-report.md  aggressive_holding_spy_100pct.json  aggressive_holding_spy_v2.json  aggressive_holding_spy_v3.json  aggressive_spy_results.json  audit_impact_check.py  data_loader.py  data_loader_synthetic.py  (+28 more)
.venv_py311/: pyvenv.cfg
archive/: intraday_v5_output.txt
backtest/: demo_blend.py  intraday_backtest.py  run_backtest.py  signal_blender.py  simple_backtest.py
backtests/: README.md  backtest_hft_scalper.py  run_all_backtests.py
docs/: ARCHITECTURE.md  AUDIT_AND_REORGANIZATION_PLAN.md  FULL_CONVERSATION_HISTORY.md  HYBRID_TUNING_RESULTS.md  LOOKAHEAD_BIAS_FIX.md  PHD_RESEARCH_REPORT.md  RESULTS.md  v18_chat_log.md  (+4 more)
(+306 files in other folders)
